add a custom font for the title

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,9 +1,10 @@
 // Place all the styles related to the Main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300);
 
 h1 {
-  font-family: Impact;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 60px;
   color: white;
   margin: 0;
