--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -4,10 +4,10 @@
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300);
 
 h1 {
+  margin-top: 56px;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 60px;
   color: white;
-  margin: 0;
 }
 
 html {
