--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<%= nav_bar :fixed => :top %>
 <head>
   <title>Melzhang</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
