--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,11 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300);
 
+body {
+  background-color: transparent;
+}
+
 h1 {
   margin-top: 56px;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 60px;
   color: white;
+  background-color: transparent;
 }
 
 html {
