--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
-<%= nav_bar :fixed => :top %>
+<%= nav_bar :fixed => :top do %>
+  <% menu_group pull: :right do %>
+  <%= menu_item "Home", root_path %>
+  <%= menu_item "Projects", projects_path %>
+  <%= menu_item "About", abouts_path %>
+  <%= menu_item "Contact", new_contact_path %>
+  <%#= menu_divider %>
+  <% end %>
+<% end %>
+
+
 <head>
-  <title>Melzhang</title>
+  <title>Mel Zhang</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <!-- Need the following link in order to see the font-awesome icon on every page -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
+  <h1 class='MZ'>Mel Zhang</h1>
+  <span class="linkedin">
+    <a href="http://www.linkedin.com/in/melzhang/" style="color: #4875B4"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  </span>
+
 <body>
 
 <%= yield %>
