--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,8 @@
 <html>
-  <h1>Mel Zhang</h1>
+  <head>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  </head>
+
+
+
 </html>
