--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,9 +4,9 @@
 
 
 .projects-header {
-  color: #fff;
+  color: #30ACFF;
   text-align: center;
-  font-family: 'Kaushan Script', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 40px;
   padding-bottom: 20px;
 }
