--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,7 @@
-<h1 class="projects-header">My Projects</h1>
-<link rel="stylesheet" href="dist/css/bootstrap.min.css">
+<!-- <h1 class="projects-header">My Projects</h1> -->
+<!-- <link rel="stylesheet" href="dist/css/bootstrap.min.css"> -->
+
+
 <!-- carousel -->
 <div id="carousel-projects" class="carousel slide container" data-ride="carousel" style=" margin: 0 auto">
   <ol class="carousel-indicators" style="">
@@ -12,7 +14,7 @@
   <div class="carousel-inner">
     <div class="item active">
       <div class="inner-item">
-        <!--width:430px, height:700px-->
+        <!--height:430px, width:700px-->
          <%= link_to image_tag("rsz_startuplandscapes_screenshot.jpg"), "http://startups.mankindforward.com/", :target => "_blank" %>
       </div>
       <div class="carousel-caption">
