--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,11 +35,22 @@ body { padding-top: 80px; }
 .navbar-header {
   padding: 10px;
 }
-a.navbar-logo {
-  padding-top: 15px;
+.navbar-inverse .container {
+  height: auto !important;
+}
+
+.container {
+  position: relative;
+}
+
+.container .navbar-logo {
+  position: absolute;
+  padding-top: 14px;
+  padding-left: 30px;
   font-family: Lato;
-  text-decoration: none;
   font-size: 30px;
+  text-decoration: none;
+  color: #fff;
   &:visited {
     color: #30ACFF;
     background-color: transparent;
@@ -50,6 +61,24 @@ a.navbar-logo {
   }
 }
 
+.container .nav {
+  float: right;
+}
+
+li.links {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  padding: 5px;
+  color: #30ACFF;
+  &:visited {
+    color: #eee;
+    background-color: #30ACFF;
+  }
+  &:hover {
+    color: #eee;
+    background-color: #30ACFF;
+  }
+}
 
 .navbar-inverse .container {
   width: auto;
@@ -62,20 +91,6 @@ a.navbar-logo {
   border-bottom-color: transparent;
   background-image: none;
   background-color: transparent;
-}
-
-.navbar .nav >li > a {
-  color: #30ACFF;
-  &:hover {
-    color: #eee;
-    background-color: #30ACFF;
-  }
-}
-.container .nav {
-  font-family: "Lato", sans-serif;
-  font-size: 20px;
-  padding-top: 10px;
-  float: right;
 }
 
 .carousel {
