--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -21,8 +21,8 @@
   background-image: -webkit-linear-gradient(top, #7a99c1, #2c4361);
   background-image: -o-linear-gradient(top, #7a99c1, #2c4361);
   background-image: linear-gradient(#7a99c1, #2c4361);
-  border-color: #2c4361 #2c4361 hsl(214, 37%, 19.5%);
   color: #fff !important;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.56);
   -webkit-font-smoothing: antialiased;
+  border-radius: 8px;
 }
