--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,19 +22,21 @@
     <a href="http://www.linkedin.com/in/melzhang/" style="color: #4875B4"><i class="fa fa-linkedin-square fa-2x"></i></a>
   </div>
 
+
+
 <!-- navbar -->
 <div class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-header">
     <p></p>
-  </div>
+</div>
   <div class="navbar-inner">
     <div class="container">
       <a class="navbar-logo" href="<%= root_url %>">Mel Zhang</a>
-        <ul class="nav">
-          <li><%= link_to "Projects", projects_path %></li>
-          <li><%= link_to "About", abouts_path %></li>
-          <li><%= link_to "Contact", new_contact_path %></li>
-        </ul>
+      <ul class="nav">
+        <li class="links"><%= link_to "Projects", projects_path %></li>
+        <li class="links"><%= link_to "About", abouts_path %></li>
+        <li class="links"><%= link_to "Contact", new_contact_path %></li>
+      </ul>
       </div>
     </div>
 </div>
