--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,4 +1,11 @@
+<div class="skillbox">
+
 <ul class="skills">
   <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
   <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
+  <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
 </ul>
+
+
+
+  </div>
