--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,6 @@
-<html>
-  <head>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  </head>
 
-
-
-</html>
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>Testing this out.</p>
+  <p><a class="btn btn-primary btn-lg" role="button">Click Here</a></p>
+</div>
