--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -6,7 +6,7 @@
   font-family: Lato, sans-serif;
   margin-left: 40px;
   margin-top: 40px;
-  color: #30ACFF;
+  color: #8A8AE6;
 }
 
 .btn-custom {
