--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,9 +4,13 @@
 
 
 .projects-header {
-  color: #30ACFF;
+  color: #8A8AE6;
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 40px;
   padding-bottom: 20px;
+}
+
+#carousel-projects {
+  padding: 40px;
 }
