--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,11 +1,13 @@
 <div class="skillbox">
+  <ul class="skills">
+    <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
+    <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
+    <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
+  </ul>
+</div>
 
-<ul class="skills">
-  <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
-  <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
-  <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
-</ul>
-
-
-
-  </div>
+<div class="bio">
+  <h1 class="bio-header">&nbsp;<i class="fa fa-hand-o-right"></i>&nbsp;Want to get to know me?</h1>
+  <br>
+  <p>testing testing testing</p>
+</div>
