--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
     <p><%= link_to "Mel Zhang", "http://about.me/melzhang" %> &copy;<%= Time.now.year%></p>
   </div>
   <div class="linkedin">
-      <a href="http://www.linkedin.com/in/melzhang/" style="color: #4875B4"><i class="fa fa-linkedin-square fa-3x"></i></a>
+      <a href="http://www.linkedin.com/in/melzhang/" style="color: white"><i class="fa fa-linkedin-square fa-3x"></i></a>
   </div>
 </div>
 
