--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,7 +35,8 @@ html {
   bottom: 20px;
   height: 60px;
   width: 100%;
-  background-color: #30ACFF;
+  /*background-color: #30ACFF; blue*/
+  background-color: #8A8AE6;
   border-top: 1px dashed white;
   border-bottom: 1px dashed white;
 }
