--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,11 +52,12 @@ body { padding-top: 80px; }
   text-decoration: none;
   color: #fff;
   &:visited {
-    color: #30ACFF;
+
+    color: #8A8AE6;
     background-color: transparent;
   }
   &:hover {
-    color: #30ACFF;
+    color: #8A8AE6;
     background-color: transparent;
   }
 }
@@ -69,14 +70,14 @@ li.links {
   font-family: "Lato", sans-serif;
   font-size: 18px;
   padding: 5px;
-  color: #30ACFF;
+  color: #8A8AE6;
   &:visited {
     color: #eee;
-    background-color: #30ACFF;
+    background-color: #8A8AE6;
   }
   &:hover {
     color: #eee;
-    background-color: #30ACFF;
+    background-color: #8A8AE6;
   }
 }
 
@@ -103,11 +104,11 @@ li.links {
 
 .carousel-indicators {
   left: 48%;
-  margin-top: 400px;
+  margin-top: 440px;
 }
 
 .carousel-indicators li {
-  background-color: #30ACFF;
+  background-color: #8A8AE6;
 }
 
 .carousel-indicators li.active {
@@ -115,13 +116,13 @@ li.links {
 }
 
 .carousel-caption {
-  border-top: 3px solid #30ACFF;
+  border-top: 3px solid #8A8AE6;
 }
 
 .carousel-control {
-  color: #30ACFF;
+  color: #8A8AE6;
 }
 
 .glyphicon {
-  color: #30ACFF;
+  color: #8A8AE6;
 }
