--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,10 +32,12 @@ body { padding-top: 80px; }
 // Example:
 // @linkColor: #ff0000;
 
+
 .navbar-header {
-  padding: 10px;
+  /*padding: 10px;*/
 }
 .navbar-inverse .container {
+  margin-top: 30px;
   height: auto !important;
 }
 
@@ -43,48 +45,56 @@ body { padding-top: 80px; }
   position: relative;
 }
 
+
 .container .navbar-logo {
   position: absolute;
-  padding-top: 14px;
-  padding-left: 30px;
-  font-family: Lato;
-  font-size: 30px;
+  padding-top: 22px;
+  padding-left: 35px;
+  font-family: Swanky and Moo Moo, sans-serif;
+  font-size: 60px;
   text-decoration: none;
-  color: #fff;
   &:visited {
-
-    color: #8A8AE6;
+    color: #55;
     background-color: transparent;
   }
   &:hover {
-    color: #8A8AE6;
+    color: #555;
     background-color: transparent;
   }
 }
 
 .container .nav {
   float: right;
+  margin-right: 25px;
+}
+
+li.links a {
+  color: #fff !important;
+  background-color: #8A8AE6;
 }
 
 li.links {
   font-family: "Lato", sans-serif;
   font-size: 18px;
   padding: 5px;
-  color: #8A8AE6;
+  margin-right: 5px;
+  background-color: #8A8AE6;
   &:visited {
-    color: #eee;
-    background-color: #8A8AE6;
+    color: #555;
+    background-color: #555;
   }
   &:hover {
-    color: #eee;
-    background-color: #8A8AE6;
+    color: #555;
+    background-color: #555;
   }
 }
 
 .navbar-inverse .container {
   width: auto;
-  background-color: #eee;
   height: 60px;
+  border-style: solid;
+  border-bottom-color: #8A8AE6;
+  border-width: 0 0 3px 0 !important;
 }
 
 .navbar-inverse .navbar-inner {
@@ -92,37 +102,4 @@ li.links {
   border-bottom-color: transparent;
   background-image: none;
   background-color: transparent;
-}
-
-.carousel {
-  width: 700px;
-}
-
-.inner-item {
-  text-align: center;
-}
-
-.carousel-indicators {
-  left: 48%;
-  margin-top: 440px;
-}
-
-.carousel-indicators li {
-  background-color: #8A8AE6;
-}
-
-.carousel-indicators li.active {
-  background-color: #fff;
-}
-
-.carousel-caption {
-  border-top: 3px solid #8A8AE6;
-}
-
-.carousel-control {
-  color: #8A8AE6;
-}
-
-.glyphicon {
-  color: #8A8AE6;
 }
