--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,6 +3,7 @@
 
 
 <!-- carousel -->
+<div class="caro">
 <div id="carousel-projects" class="carousel slide container" data-ride="carousel" style=" margin: 0 auto">
   <ol class="carousel-indicators" style="">
     <li data-target="#carousel-projects" data-slide-to="0" class="active"></li>
@@ -15,7 +16,7 @@
     <div class="item active">
       <div class="inner-item">
         <!--height:430px, width:700px-->
-         <%= link_to image_tag("rsz_startuplandscapes_screenshot.jpg"), "http://startups.mankindforward.com/", :target => "_blank" %>
+         <%= link_to image_tag("sl.jpg"), "http://startups.mankindforward.com/", :target => "http://startups.mankindforward.com/" %>
       </div>
       <div class="carousel-caption">
         <p>Startup Landscapes</p>
@@ -48,6 +49,7 @@
   <a class="right carousel-control" href="#carousel-projects" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right">&rsaquo;</span>
   </a>
+</div>
 </div>
 
 <script>
