--- a/app/assets/stylesheets/abouts.css.scss
+++ b/app/assets/stylesheets/abouts.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
 .fa.fa-check {
   color: #8A8AE6;
   padding-left: 20px;
@@ -12,7 +13,7 @@ ul.skills {
   padding-top: 20px;
   font-family: Lato;
   font-size: 18px;
-  color: #777;
+  color: #555;
   margin-left: 0px;
 }
 
@@ -21,29 +22,29 @@ ul.skills li {
 }
 
 .skillbox {
-  border-style: dashed;
-  border-radius: 5px;
-  border-width: 3px;
-  border-color: #6495ED;
   height: 300px;
   width: 200px;
-  background-color: #BCD2EE;
-  margin-left: 100px;
+  background-color: transparent;
+  float: right;
+  margin-right: 40px;
+  margin-top: 60px;
+  /*margin-left: 400px;
   margin-right: 10px;
-  margin-top: 100px;
-  display: inline-block;
+  margin-top: 100px;*/
+  /*display: inline;*/
+  border-radius: 7px;
 }
 
 .bio {
-  display: inline-block;
-  background-color: #A1A1EB;
-  border-style: dashed;
-  border-color: #5050A7;
-  border-radius: 5px;
-  border-width: 3px;
-  height: 300px;
-  width: 550px;
+  /*display: inline;*/
+  background-color: transparent;
+  height: 600px;
+  width: 500px;
+  float: right;
+  margin-right: 20px;
+  margin-top: 60px;
   padding-left: 10px;
+  color: #555;
 }
 
 .bio-header {
@@ -53,4 +54,45 @@ ul.skills li {
 
 .bio p {
   font-size: 20px;
+}
+
+
+.caro {
+  margin-right: 80px;
+  margin-top: 150px;
+  float: right;
+  clear: top;
+  display: inline-block;
+}
+.carousel {
+  width: 800px !important;
+}
+
+.inner-item {
+  text-align: center;
+}
+
+.carousel-indicators {
+  left: 48%;
+  margin-top: 420px;
+}
+
+.carousel-indicators li {
+  background-color: #8A8AE6;
+}
+
+.carousel-indicators li.active {
+  background-color: #fff;
+}
+
+.carousel-caption {
+  border-top: 3px solid #8A8AE6;
+}
+
+.carousel-control {
+  color: #8A8AE6;
+}
+
+.glyphicon {
+  color: #8A8AE6;
 }
