--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -4,25 +4,27 @@
 
 .contactform {
   font-family: Lato, sans-serif;
-  margin-left: 40px;
-  margin-top: 40px;
+  float: right;
+  margin-right: 100px;
+  margin-top: 70px;
   color: #8A8AE6;
 }
 
 .btn-custom {
-  font-weight: bold;
-  background-color: hsl(214, 37%, 28%) !important;
+  background-color: hsl(260, 37%, 28%) !important;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7a99c1", endColorstr="#2c4361");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#7a99c1), to(#2c4361));
-  background-image: -moz-linear-gradient(top, #7a99c1, #2c4361);
-  background-image: -ms-linear-gradient(top, #7a99c1, #2c4361);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7a99c1), color-stop(100%, #2c4361));
-  background-image: -webkit-linear-gradient(top, #7a99c1, #2c4361);
-  background-image: -o-linear-gradient(top, #7a99c1, #2c4361);
-  background-image: linear-gradient(#7a99c1, #2c4361);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#927ac1", endColorstr="#3e2c61");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#927ac1), to(#3e2c61));
+  background-image: -moz-linear-gradient(top, #927ac1, #3e2c61);
+  background-image: -ms-linear-gradient(top, #927ac1, #3e2c61);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #927ac1), color-stop(100%, #3e2c61));
+  background-image: -webkit-linear-gradient(top, #927ac1, #3e2c61);
+  background-image: -o-linear-gradient(top, #927ac1, #3e2c61);
+  background-image: linear-gradient(#927ac1, #3e2c61);
+  border-color: #3e2c61 #3e2c61 hsl(260, 37%, 19.5%);
   color: #fff !important;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.56);
   -webkit-font-smoothing: antialiased;
   border-radius: 8px;
+  font-weight: bold;
 }
