--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -54,7 +54,7 @@ body { padding-top: 80px; }
   font-size: 60px;
   text-decoration: none;
   &:visited {
-    color: #55;
+    color: #555;
     background-color: transparent;
   }
   &:hover {
@@ -65,7 +65,7 @@ body { padding-top: 80px; }
 
 .container .nav {
   float: right;
-  margin-right: 25px;
+  margin-right: 90px;
 }
 
 li.links a {
@@ -102,4 +102,47 @@ li.links {
   border-bottom-color: transparent;
   background-image: none;
   background-color: transparent;
+}
+
+
+
+.caro {
+  margin-right: 80px;
+  padding-top: 150px;
+  padding-bottom: 400px;
+  float: right;
+  clear: both;
+  position: relative;
+}
+.carousel {
+  width: 800px !important;
+}
+
+.inner-item {
+  text-align: center;
+}
+
+.carousel-indicators {
+  left: 48%;
+  margin-top: 425px;
+}
+
+.carousel-indicators li {
+  background-color: #8A8AE6;
+}
+
+.carousel-indicators li.active {
+  background-color: #fff;
+}
+
+.carousel-caption {
+  border-top: 3px solid #8A8AE6;
+}
+
+.carousel-control {
+  color: #8A8AE6;
+}
+
+.glyphicon {
+  color: #8A8AE6;
 }
