--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,3 +1,5 @@
+%h1.contactheader Contact Me
+
 .contactform
   = simple_form_for @contact do |f|
     = f.input :name, label: 'Your Name', :required => false
