--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,6 +7,15 @@
 */
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300|Kaushan+Script|Lato|Alegreya+Sans+SC|Poiret+One|La+Belle+Aurore|Swanky+and+Moo+Moo|Special+Elite|Delius|Amaranth|Architects+Daughter|Over+the+Rainbow);
 
+
+.aboutmeicon {
+  margin-left: 450px;
+  margin-top: 10px;
+  position: absolute;
+  height: 38.89px;
+  width: 33.33px;
+}
+
 .linkedin a:link {
   background-color: transparent;
 }
@@ -16,9 +25,10 @@
 }
 
 .linkedin {
-  margin-left: 400px;
-  margin-top: 10px;
   position: absolute;
+  right: 0;
+  margin-top: 20px;
+  margin-right: 30px;
 }
 
 
@@ -33,6 +43,64 @@ html {
   -o-background-size: cover;
   background-size: cover;
   /*background-color: #eee;*/
+}
+
+.about {
+  position: relative;
+  padding-top: 100px;
+}
+
+.fa.fa-check {
+  color: #8A8AE6;
+  padding-left: 20px;
+}
+
+ul.skills {
+  list-style-type: none;
+  padding-top: 20px;
+  font-family: Lato;
+  font-size: 18px;
+  color: #555;
+  margin-left: 0px;
+}
+
+ul.skills li {
+  padding-bottom: 7px;
+}
+
+.skillbox {
+  height: 300px;
+  width: 200px;
+  background-color: transparent;
+  float: right;
+  margin-right: 40px;
+  margin-top: 60px;
+  /*margin-left: 400px;
+  margin-right: 10px;
+  margin-top: 100px;*/
+  /*display: inline;*/
+  border-radius: 7px;
+}
+
+.bio {
+  /*display: inline;*/
+  background-color: transparent;
+  height: 600px;
+  width: 500px;
+  float: right;
+  margin-right: 20px;
+  margin-top: 60px;
+  padding-left: 10px;
+  color: #555;
+}
+
+.bio-header {
+  font-family: Lato;
+  font-size: 30px;
+}
+
+.bio p {
+  font-size: 20px;
 }
 
 
