took out Contact page for now

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -49,6 +49,8 @@
   clear: both;
 }
 
+.hidden { display: none; }
+
 .btn-custom {
   background-color: hsl(260, 37%, 28%) !important;
   background-repeat: repeat-x;
