--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
       <ul class="nav">
         <li class="links"><a href="<%= root_path %>#About">About</a></li>
         <li class="links"><a href="<%= root_path %>#Projects">Projects</a></li>
-        <li class="links"><%= link_to "Contact", new_contact_path %></li>
-      </ul>
+        <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li>
+      </ul> -->
       <div class="linkedin">
         <a href="http://www.linkedin.com/in/melzhang/" target="_blank" style="color: #8A8AE6"><i class="fa fa-linkedin-square fa-2x"></i></a>
       </div>
