--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ body {
 }
 
 html {
-  background: image-url(ledge1light.jpg) no-repeat center center fixed;
+  background: url('/assets/images/ledge1light.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
