--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@ body {
 }
 
 html {
-  background: url('/assets/ledge1light.jpg') no-repeat center center fixed;
+  background: image-url('ledge1light.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
