edited About page, added footer

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,15 +10,17 @@
   </div>
 
   <div class="bio">
-    <h1 class="bio-header">Header</h1>
+    <h1 class="bio-header">About Me</h1>
     <br>
-    <p>testing testing testing</p>
-  </div>
+    <p>Hi there, I’m Mel Zhang, a budding Ruby on Rails developer.</p>
+    <p>Originally my plan was to go into medicine (I even shadowed neurologists!), but I questioned whether I would be satisfied with the lifestyle a career in medicine entailed. I’ve decided to dive into the world of web development to embrace my love for the Internet and embrace my need for creativity. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. Although there is so much to learn, I’ve realized that climbing up steep learning curves is one of the more challenging, yet rewarding, parts of life. </p>
+</div>
 </div>
 
 
 <!-- carousel -->
 <a id="Projects"></a>
+<h1 class="projects-header">Projects<h1>
 <div class="caro">
   <div id="carousel-projects" class="carousel slide container" data-ride="carousel" style=" margin: 0 auto">
     <ol class="carousel-indicators" style="">
@@ -35,8 +37,8 @@
            <%= link_to image_tag("sl.jpg"), "http://startups.mankindforward.com/", :target => "http://startups.mankindforward.com/" %>
         </div>
         <div class="carousel-caption">
-          <p>Startup Landscapes</p>
-          <p>Navigate the continuously changing world of startups. Crunchbase..</p>
+          <p>- Startup Landscapes -</p>
+          <p>A website for quick navigation of the continuously changing world of startups that displays current startups organized by industry. Uses the Crunchbase API.</p>
           <br>
         </div>
       </div>
