--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,15 +16,15 @@
   width: 33.33px;
 }
 
-.linkedin a:link {
+.navbar-linkedin a:link {
   background-color: transparent;
 }
 
-.linkedin a:hover {
+.navbar-linkedin a:hover {
   background-color: transparent;
 }
 
-.linkedin {
+.navbar-linkedin {
   position: absolute;
   right: 0;
   margin-top: 20px;
@@ -45,86 +45,36 @@ html {
   /*background-color: #eee;*/
 }
 
-.about {
-  position: relative;
-  padding-top: 100px;
-}
-
-.fa.fa-check {
-  color: #8A8AE6;
-  padding-left: 20px;
-}
-
-ul.skills {
-  list-style-type: none;
-  padding-top: 20px;
-  font-family: Lato;
-  font-size: 18px;
-  color: #555;
-  margin-left: 0px;
-}
-
-ul.skills li {
-  padding-bottom: 7px;
-}
-
-.skillbox {
-  height: 300px;
-  width: 200px;
-  background-color: transparent;
-  float: right;
-  margin-right: 40px;
-  margin-top: 60px;
-  /*margin-left: 400px;
-  margin-right: 10px;
-  margin-top: 100px;*/
-  /*display: inline;*/
-  border-radius: 7px;
-}
-
-.bio {
-  /*display: inline;*/
-  background-color: transparent;
-  height: 600px;
-  width: 500px;
-  float: right;
-  margin-right: 20px;
-  margin-top: 60px;
-  padding-left: 10px;
-  color: #555;
-}
-
-.bio-header {
-  font-family: Lato;
-  font-size: 30px;
-}
-
-.bio p {
-  font-size: 20px;
-}
 
 
-/*.footer {
-  position: absolute;
+
+.footer {
+  position: fixed;
   left: 0px;
-  bottom: 20px;
-  height: 60px;
-  width: 100%;
+  bottom: 0px;
+  height: 30px;
+  width: 36%;
   background-color: #8A8AE6;
   border: none;
 }
 
-.footer .linkedin {
-  margin-left: 300px;
-  margin-top: -25px;
+.footer .footer-linkedin {
+  margin-left: 200px;
+  margin-top: -22px;
+}
+
+.footer-linkedin a {
+  &:hover {
+    background-color: transparent;
+  }
 }
 
 .footer-text {
-  margin-top: 20px;
+  margin-top: 6px;
   padding-left: 30px;
   color: #fff;
   font-family: Lato;
-  font-size: ;
+  font-size: 14px;
   font-style: bold;
 }
 
@@ -135,11 +85,13 @@ ul.skills li {
 .footer-text a:link {
   color: #fff;
   text-decoration: none;
+  background-color: transparent;
 }
 
 .footer-text a:visited {
   color: #fff;
   text-decoration: none;
+  background-color: transparent;
 }
 
 .footer-text a:hover {
@@ -151,5 +103,5 @@ ul.skills li {
 .footer-text a a:active {
   color: #fff;
   text-decoration: none;
+  background-color: transparent;
 }
-*/
