--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -108,7 +108,7 @@ li.links {
 
 .caro {
   margin-right: 80px;
-  padding-top: 150px;
+  padding-top: 25px;
   padding-bottom: 400px;
   float: right;
   clear: both;
@@ -137,6 +137,11 @@ li.links {
 
 .carousel-caption {
   border-top: 3px solid #8A8AE6;
+}
+
+.carousel-caption p {
+  font-family: Lato !important;
+  font-size: 16px;
 }
 
 .carousel-control {
