--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,7 +2,103 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.jumbotron {
-  padding-left: 60px;
-  padding-right: 60px;
+.projects-header {
+  font-family: Lato;
+  font-size: 36px;
+  color: #555 !important;
+  font-weight: 200;
+  margin-right: 750px;
+  padding-top: 150px;
+  float: right;
+  clear: both;
+  position: relative;
+}
+
+.about {
+  position: relative;
+  padding-top: 100px;
+}
+
+.about-linkedin a:link {
+  background-color: transparent;
+}
+
+.about-linkedin a:hover {
+  background-color: transparent;
+}
+
+.about-linkedin {
+  /*position: relative;
+  padding-left: 500px;
+  padding-bottom: 50px;*/
+  float: right;
+}
+
+.fa.fa-check {
+  color: #8A8AE6;
+  padding-left: 20px;
+}
+
+ul.skills {
+  list-style-type: none;
+  padding-top: 20px;
+  font-family: Lato;
+  font-size: 18px;
+  color: #555;
+  margin-left: 0px;
+}
+
+ul.skills li {
+  padding-bottom: 7px;
+}
+
+.skillbox {
+  height: 300px;
+  width: 200px;
+  background-color: transparent;
+  position: relative;
+  float: right;
+  margin-right: 40px;
+  margin-top: 60px;
+  /*margin-left: 400px;
+  margin-right: 10px;
+  margin-top: 100px;*/
+  /*display: inline;*/
+  border-radius: 7px;
+}
+
+.bio {
+  /*display: inline;*/
+  background-color: transparent;
+  height: 600px;
+  width: 600px;
+  float: right;
+  margin-right: 20px;
+  margin-top: 60px;
+  padding-left: 10px;
+  color: #555;
+}
+
+.bio-header {
+  font-family: Lato;
+  font-size: 36px;
+}
+
+.bio p {
+  font-size: 18px;
+  line-height: 115%
+}
+
+.bio a {
+  text-decoration: none;
+  color: #8A8AE6;
+  &:visited {
+    color: #8A8AE6;
+    background-color: transparent;
+  }
+  &:hover {
+    color: #8A8AE6;
+    background-color: transparent;
+    text-decoration: underline;
+  }
 }
