--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <li class="links"><a href="<%= root_path %>#Projects">Projects</a></li>
         <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li>
       </ul> -->
-      <div class="linkedin">
+      <div class="navbar-linkedin">
         <a href="http://www.linkedin.com/in/melzhang/" target="_blank" style="color: #8A8AE6"><i class="fa fa-linkedin-square fa-2x"></i></a>
       </div>
       </div>
@@ -46,14 +46,14 @@
 
 
 
-<!-- <div class="footer">
+<div class="footer">
   <div class="footer-text">
     <p><%= link_to "Mel Zhang", "http://about.me/melzhang" %> &copy;<%= Time.now.year%></p>
   </div>
-  <div class="linkedin">
-      <a href="http://www.linkedin.com/in/melzhang/" style="color: white"><i class="fa fa-linkedin-square fa-3x"></i></a>
+  <div class="footer-linkedin">
+      <a href="http://www.linkedin.com/in/melzhang/" style="color: white" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
   </div>
-</div> -->
+</div>
 
 <%= yield %>
 
