precompiled assets for heroku

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -13,7 +13,7 @@
     <h1 class="bio-header">About Me</h1>
     <br>
     <p>Hi there, I’m Mel Zhang, a budding Ruby on Rails developer.</p>
-    <p>Originally my plan was to go into medicine (I even shadowed neurologists!), but I questioned whether I would be satisfied with the lifestyle a career in medicine entailed. I’ve decided to dive into the world of web development to embrace my love for the Internet and embrace my need for creativity. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. Although there is so much to learn, I’ve realized that climbing up steep learning curves is one of the more challenging, yet rewarding, parts of life. </p>
+    <p>I am diving into the world of web development to embrace my love for the Internet and fuel my creativity. Originally my plan was to go into medicine (I even shadowed neurologists!), but I questioned whether I would be satisfied with the lifestyle a career in medicine entailed. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. Although there is so much to learn, I’ve realized that climbing up steep learning curves is one of the more challenging, yet rewarding, parts of life. </p>
 </div>
 </div>
 
